Migration to new APIs, part IV: modify CSSHandler and add several events to it.
This is one of the most important steps towards NSAC 2.0.