@@ -61,7 +61,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetRule() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -84,7 +84,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetRule2() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -108,7 +108,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetStyleRuleBad() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -134,7 +134,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetStyleRuleBadNested() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -143,7 +143,6 @@ public class SheetParserTest {
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.mediaRuleLists.size());
 		assertEquals("screen and (min-width: 768px)", handler.mediaRuleLists.get(0).toString());
-		assertEquals(1, handler.endMediaCount);
 		assertEquals(1, handler.selectors.size());
 		assertEquals(".foo", handler.selectors.getFirst().toString());
 		assertEquals(2, handler.propertyNames.size());
@@ -164,7 +163,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testMalformedStyleRule() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -191,7 +190,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testMalformedStyleRule2() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -218,7 +217,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testMalformedStyleRule3() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -245,7 +244,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetSelectorError() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -262,7 +261,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetNSRule() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -286,7 +285,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetSelectorErrorBadNSPrefix() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -303,7 +302,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetDuplicateSelector() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -325,7 +324,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetCommentWDoubleStar() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -348,7 +347,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetCommentWDoubleStar2() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -371,7 +370,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetCommentWStarNL() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -396,7 +395,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetErrorNL() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -420,7 +419,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetCommentEnd() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -441,7 +440,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseSheetCommentEnd2() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -463,7 +462,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseDefaultNS() throws CSSException, IOException {
 		Reader re = new StringReader("@namespace url(\"https://www.w3.org/1999/xhtml/\");");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -476,7 +475,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseDefaultNSEOF() throws CSSException, IOException {
 		Reader re = new StringReader("@namespace url(\"https://www.w3.org/1999/xhtml/\")");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -489,7 +488,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseDefaultNSBad() throws CSSException, IOException {
 		Reader re = new StringReader("@namespace url(;");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -503,7 +502,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseDefaultNSBad2() throws CSSException, IOException {
 		Reader re = new StringReader("@namespace url();");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -517,7 +516,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseDefaultNSDQ() throws CSSException, IOException {
 		Reader re = new StringReader("@namespace \"\" url(\"https://www.w3.org/1999/xhtml/\");");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -530,7 +529,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseDefaultNSNoURL() throws CSSException, IOException {
 		Reader re = new StringReader("@namespace \"https://www.w3.org/1999/xhtml/\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -543,7 +542,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseNSNoURL() throws CSSException, IOException {
 		Reader re = new StringReader("@namespace xhtml \"https://www.w3.org/1999/xhtml/\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -556,7 +555,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseNSNoURLEOF() throws CSSException, IOException {
 		Reader re = new StringReader("@namespace xhtml \"https://www.w3.org/1999/xhtml/\"");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -569,7 +568,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseNSEOF() throws CSSException, IOException {
 		Reader re = new StringReader("@namespace xhtml url(\"https://www.w3.org/1999/xhtml/\")");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -583,7 +582,7 @@ public class SheetParserTest {
 	public void testParseSimpleNS() throws CSSException, IOException {
 		Reader re = new StringReader(
 				"@namespace svg url('http://www.w3.org/2000/svg'); p {color: blue;} svg|svg {margin-left: 5pt;}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -610,7 +609,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseMinimalStyleSheet() throws CSSException, IOException {
 		Reader re = DOMCSSStyleSheetFactoryTest.loadSampleUserCSSReader();
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -631,17 +630,17 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseStyleSheet1() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		Reader re = loadTestCSSReader("sheet1.css");
 		parser.parseStyleSheet(re);
 		re.close();
-		assertEquals(1, handler.atRules.size());
-		assertEquals(
-				"@supports (display: table-cell) and (display: list-item) {td {display: table-cell; } li {display: list-item; }}",
-				handler.atRules.getFirst());
+		//
+		assertEquals(1, handler.supportsRuleLists.size());
+		assertEquals("(display: table-cell) and (display: list-item)",
+				handler.supportsRuleLists.get(0).toString());
 		assertEquals(1, handler.namespaceMaps.size());
 		assertEquals("svg", handler.namespaceMaps.keySet().iterator().next());
 		assertEquals("http://www.w3.org/2000/svg", handler.namespaceMaps.get("svg"));
@@ -652,25 +651,34 @@ public class SheetParserTest {
 		assertEquals("tv,screen and (orientation: landscape)", handler.importMedias.get(0).toString());
 		assertEquals(1, handler.importURIs.size());
 		assertEquals("tv.css", handler.importURIs.get(0));
+		//
 		assertEquals(5, handler.comments.size());
 		assertEquals(" Comment before li ", handler.comments.get(0));
 		assertEquals(" Comment before frame ", handler.comments.get(1));
 		assertEquals(" Comment before frameset ", handler.comments.get(2));
 		assertEquals(" Comment before noframes ", handler.comments.get(3));
-		assertEquals(19, handler.propertyNames.size());
-		assertEquals("font-weight", handler.propertyNames.getFirst());
-		assertEquals("float", handler.propertyNames.get(16));
-		assertEquals("font-size", handler.propertyNames.get(17));
+		//
+		assertEquals(21, handler.propertyNames.size());
+		assertEquals("display", handler.propertyNames.getFirst());
+		assertEquals("font-weight", handler.propertyNames.get(2));
+		assertEquals("float", handler.propertyNames.get(18));
+		assertEquals("font-size", handler.propertyNames.get(19));
 		assertEquals("border", handler.propertyNames.getLast());
-		assertEquals(19, handler.lexicalValues.size());
-		assertEquals("bold", handler.lexicalValues.getFirst().toString());
-		assertEquals("left", handler.lexicalValues.get(16).toString());
-		assertEquals("12pt", handler.lexicalValues.get(17).toString());
+		assertEquals(21, handler.lexicalValues.size());
+		assertEquals("table-cell", handler.lexicalValues.getFirst().toString());
+		assertEquals("bold", handler.lexicalValues.get(2).toString());
+		assertEquals("left", handler.lexicalValues.get(18).toString());
+		assertEquals("12pt", handler.lexicalValues.get(19).toString());
 		assertEquals("solid orange", handler.lexicalValues.getLast().toString());
-		assertEquals(19, handler.priorities.size());
-		String prio = handler.priorities.get(10);
+		assertEquals(21, handler.priorities.size());
+		String prio = handler.priorities.get(12);
 		assertNotNull(prio);
 		assertEquals("important", prio);
+		//
+		assertEquals(1, handler.atRules.size());
+		assertEquals("@-webkit-viewport {width: device-width; height: device-height}",
+				handler.atRules.getFirst());
+		//
 		assertFalse(errorHandler.hasError());
 		handler.checkRuleEndings();
 	}
@@ -678,19 +686,28 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetBadMedia() throws CSSException, IOException {
 		Reader re = loadTestCSSReader("badmedia.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		re.close();
-		assertEquals(1, handler.atRules.size());
-		assertEquals(
-				"@supports (display: table-cell) and (display: list-item) {td {display: table-cell; } li {display: list-item; }}",
-				handler.atRules.getFirst());
+		//
+		assertEquals(1, handler.supportsRuleLists.size());
+		assertEquals("(display: table-cell) and (display: list-item)",
+				handler.supportsRuleLists.get(0).toString());
+		assertEquals(14, handler.selectors.size());
+		assertEquals("td", handler.selectors.get(0).toString());
+		assertEquals("li", handler.selectors.get(1).toString());
+		assertEquals("body", handler.selectors.get(2).toString());
+		assertEquals("li", handler.selectors.get(6).toString());
+		assertEquals("body", handler.selectors.get(12).toString());
+		assertEquals(14, handler.endSelectors.size());
+		//
 		assertEquals(1, handler.namespaceMaps.size());
 		assertEquals("svg", handler.namespaceMaps.keySet().iterator().next());
 		assertEquals("http://www.w3.org/2000/svg", handler.namespaceMaps.get("svg"));
+		//
 		assertEquals(3, handler.mediaRuleLists.size());
 		MediaQueryList mql = handler.mediaRuleLists.get(1);
 		assertTrue(mql.isNotAllMedia());
@@ -701,43 +718,54 @@ public class SheetParserTest {
 		assertEquals("tv,screen and (orientation: landscape)", handler.importMedias.get(0).toString());
 		assertEquals(1, handler.importURIs.size());
 		assertEquals("tv.css", handler.importURIs.get(0));
+		//
 		assertEquals(4, handler.comments.size());
 		assertEquals(" Comment before li ", handler.comments.get(0));
 		assertEquals(" Comment before frame ", handler.comments.get(1));
 		assertEquals(" Comment before frameset ", handler.comments.get(2));
 		assertEquals(" Comment before noframes ", handler.comments.get(3));
-		assertEquals(20, handler.propertyNames.size());
-		assertEquals("font-weight", handler.propertyNames.get(1));
-		assertEquals("color", handler.propertyNames.get(12));
-		assertEquals("float", handler.propertyNames.get(17));
-		assertEquals("font-size", handler.propertyNames.get(18));
+		//
+		assertEquals(22, handler.propertyNames.size());
+		assertEquals("display", handler.propertyNames.get(0));
+		assertEquals("display", handler.propertyNames.get(1));
+		assertEquals("font-weight", handler.propertyNames.get(3));
+		assertEquals("color", handler.propertyNames.get(14));
+		assertEquals("float", handler.propertyNames.get(19));
+		assertEquals("font-size", handler.propertyNames.get(20));
 		assertEquals("border", handler.propertyNames.getLast());
-		assertEquals(20, handler.lexicalValues.size());
-		assertEquals("bold", handler.lexicalValues.get(1).toString());
-		assertEquals("yellow", handler.lexicalValues.get(12).toString());
-		assertEquals("left", handler.lexicalValues.get(17).toString());
-		assertEquals("12pt", handler.lexicalValues.get(18).toString());
+		assertEquals(22, handler.lexicalValues.size());
+		assertEquals("table-cell", handler.lexicalValues.get(0).toString());
+		assertEquals("list-item", handler.lexicalValues.get(1).toString());
+		assertEquals("bold", handler.lexicalValues.get(3).toString());
+		assertEquals("yellow", handler.lexicalValues.get(14).toString());
+		assertEquals("left", handler.lexicalValues.get(19).toString());
+		assertEquals("12pt", handler.lexicalValues.get(20).toString());
 		assertEquals("solid orange", handler.lexicalValues.getLast().toString());
-		assertEquals(20, handler.priorities.size());
-		String prio = handler.priorities.get(11);
+		assertEquals(22, handler.priorities.size());
+		String prio = handler.priorities.get(13);
 		assertNotNull(prio);
 		assertEquals("important", prio);
+		//
+		assertEquals(1, handler.atRules.size());
+		assertEquals("@-webkit-viewport {width: device-width; height: device-height}",
+				handler.atRules.getFirst());
+		//
 		assertTrue(errorHandler.hasError());
 		assertEquals(13, errorHandler.getLastException().getLineNumber());
+		assertEquals(35, errorHandler.getLastException().getColumnNumber());
 		handler.checkRuleEndings();
 	}
 
 	@Test
 	public void testParseStyleSheetMediaRule() throws CSSException, IOException {
 		Reader re = new StringReader("@media {div.foo{margin:1em}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.mediaRuleLists.size());
 		assertEquals("all", handler.mediaRuleLists.get(0).toString());
-		assertEquals(1, handler.endMediaCount);
 		assertEquals(1, handler.selectors.size());
 		assertEquals(1, handler.propertyNames.size());
 		assertEquals("margin", handler.propertyNames.get(0));
@@ -753,7 +781,7 @@ public class SheetParserTest {
 	public void testParseStyleSheetMediaRuleErrorRecovery() throws CSSException, IOException {
 		Reader re = new StringReader(
 				"@media handheld,only screen and (max-width:1600px) .foo{bottom: 20px!important; }@media {div.foo{margin:1em}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -763,7 +791,6 @@ public class SheetParserTest {
 		assertEquals("handheld", mq0.toString());
 		assertTrue(mq0.hasErrors());
 		assertEquals("all", handler.mediaRuleLists.get(1).toString());
-		assertEquals(2, handler.endMediaCount);
 		assertEquals(1, handler.selectors.size());
 		assertEquals(1, handler.propertyNames.size());
 		assertEquals("margin", handler.propertyNames.get(0));
@@ -781,7 +808,7 @@ public class SheetParserTest {
 	public void testParseStyleSheetNestedMediaRule() throws CSSException, IOException {
 		Reader re = new StringReader(
 				"@media screen {.foo{bottom: 20px!important; }@media (max-width:1600px){div.foo{margin:1em}}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -801,7 +828,6 @@ public class SheetParserTest {
 		assertEquals(2, handler.priorities.size());
 		assertEquals("important", handler.priorities.get(0));
 		assertNull(handler.priorities.get(1));
-		assertEquals(2, handler.endMediaCount);
 		assertFalse(errorHandler.hasError());
 		handler.checkRuleEndings();
 	}
@@ -810,7 +836,7 @@ public class SheetParserTest {
 	public void testParseStyleSheetNestedMediaFontFaceRule() throws CSSException, IOException {
 		Reader re = new StringReader(
 				"@media screen{@font-face{font-family:\"foo-family\";src:url(\"fonts/foo-file.svg#bar-icons\") format('svg')}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -828,8 +854,6 @@ public class SheetParserTest {
 		assertEquals(2, handler.priorities.size());
 		assertNull(handler.priorities.get(0));
 		assertNull(handler.priorities.get(1));
-		assertEquals(1, handler.endMediaCount);
-		assertEquals(1, handler.endFontFaceCount);
 		assertFalse(errorHandler.hasError());
 		handler.checkRuleEndings();
 	}
@@ -837,14 +861,13 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetMediaRuleIEHack() throws CSSException, IOException {
 		Reader re = new StringReader("@media screen\\0 {.foo{margin:1em}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.mediaRuleLists.size());
 		assertEquals("screen\\0", handler.mediaRuleLists.get(0).toString());
-		assertEquals(1, handler.endMediaCount);
 		assertEquals(1, handler.selectors.size());
 		assertEquals(".foo", handler.selectors.get(0).item(0).toString());
 		assertEquals(1, handler.propertyNames.size());
@@ -861,7 +884,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetCommon() throws CSSException, IOException {
 		Reader re = loadTestCSSReader("common.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -892,7 +915,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetRemote() throws CSSException, IOException {
 		if (TestConfig.REMOTE_TESTS) {
-			TestDocumentHandler handler = new TestDocumentHandler();
+			TestCSSHandler handler = new TestCSSHandler();
 			parser.setDocumentHandler(handler);
 			TestErrorHandler errorHandler = new TestErrorHandler();
 			parser.setErrorHandler(errorHandler);
@@ -908,26 +931,34 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetFontFaceRule() throws CSSException, IOException {
 		Reader re = loadCSSfromClasspath("/io/sf/carte/doc/agent/common.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.selectors.size());
 		assertEquals("body", handler.selectors.getFirst().toString());
-		assertEquals(3, handler.propertyNames.size());
+		//
+		assertEquals(1, handler.fontFeaturesNames.size());
+		assertEquals("Foo Sans", handler.fontFeaturesNames.get(0)[0]);
+		assertEquals(1, handler.featureMapNames.size());
+		assertEquals("styleset", handler.featureMapNames.get(0));
+		//
+		assertEquals(4, handler.propertyNames.size());
 		assertEquals("background-color", handler.propertyNames.get(0));
 		assertEquals("font-family", handler.propertyNames.get(1));
 		assertEquals("src", handler.propertyNames.get(2));
-		assertEquals(3, handler.lexicalValues.size());
+		assertEquals("my-style", handler.propertyNames.get(3));
+		assertEquals(4, handler.lexicalValues.size());
 		assertEquals("red", handler.lexicalValues.get(0).toString());
 		assertEquals("'Mechanical Bold'", handler.lexicalValues.get(1).toString());
 		assertEquals("url('font/MechanicalBd.otf')", handler.lexicalValues.get(2).toString());
-		assertEquals(3, handler.priorities.size());
+		assertEquals("2", handler.lexicalValues.get(3).toString());
+		assertEquals(4, handler.priorities.size());
 		assertNull(handler.priorities.get(0));
+		assertNull(handler.priorities.get(3));
 		assertEquals(1, handler.fontFaceCount);
-		assertEquals(1, handler.atRules.size());
-		assertEquals("@font-feature-values Foo Sans, Bar { @styleset { my-style: 2; } }", handler.atRules.getFirst());
+		assertEquals(0, handler.atRules.size());
 		assertFalse(errorHandler.hasError());
 		handler.checkRuleEndings();
 	}
@@ -936,7 +967,7 @@ public class SheetParserTest {
 	public void testParseStyleSheetFontFaceRuleWrongChar() throws CSSException, IOException {
 		Reader re = new StringReader(
 				"\ufeff@font-face{font-family:'FooSans';src:url(font/FooSans.woff2) format('woff2')}@import 'foo.css';");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -960,7 +991,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetPageRule() throws CSSException, IOException {
 		Reader re = loadTestCSSReader("page.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -983,16 +1014,17 @@ public class SheetParserTest {
 		assertEquals("counter(page)", handler.lexicalValues.get(4).toString());
 		assertEquals(6, handler.priorities.size());
 		assertNull(handler.priorities.get(0));
-		assertEquals(5, handler.pageRuleNames.size());
+		assertEquals(3, handler.pageRuleNames.size());
 		assertNull(handler.pageRuleNames.getFirst());
 		assertEquals("foo", handler.pageRuleNames.get(1));
-		assertEquals("top-center", handler.pageRuleNames.get(2));
-		assertEquals("bottom-center", handler.pageRuleNames.get(3));
-		assertEquals("bar", handler.pageRuleNames.get(4));
-		assertEquals(5, handler.pseudoPages.size());
+		assertEquals("bar", handler.pageRuleNames.get(2));
+		assertEquals(2, handler.marginRuleNames.size());
+		assertEquals("top-center", handler.marginRuleNames.get(0));
+		assertEquals("bottom-center", handler.marginRuleNames.get(1));
+		assertEquals(3, handler.pseudoPages.size());
 		assertEquals(":first", handler.pseudoPages.get(0));
 		assertEquals(":left", handler.pseudoPages.get(1));
-		assertEquals(":right,:blank", handler.pseudoPages.get(4));
+		assertEquals(":right,:blank", handler.pseudoPages.get(2));
 		assertFalse(errorHandler.hasError());
 		handler.checkRuleEndings();
 	}
@@ -1000,16 +1032,16 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetPageRule2() throws CSSException, IOException {
 		Reader re = new StringReader("@page :first{margin-top:20%;@top-left{content:'foo';color:blue}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
-		assertEquals(2, handler.pageRuleNames.size());
+		assertEquals(1, handler.pageRuleNames.size());
 		assertNull(handler.pageRuleNames.getFirst());
-		assertEquals("top-left", handler.pageRuleNames.get(1));
 		assertEquals(":first", handler.pseudoPages.getFirst());
-		assertEquals(2, handler.endPageCount);
+		assertEquals(1, handler.marginRuleNames.size());
+		assertEquals("top-left", handler.marginRuleNames.get(0));
 		assertEquals(3, handler.propertyNames.size());
 		assertEquals("margin-top", handler.propertyNames.get(0));
 		assertEquals("content", handler.propertyNames.get(1));
@@ -1021,10 +1053,10 @@ public class SheetParserTest {
 		assertEquals(7, handler.eventSeq.size());
 		assertEquals("startPage", handler.eventSeq.get(0));
 		assertEquals("property", handler.eventSeq.get(1));
-		assertEquals("startPage", handler.eventSeq.get(2));
+		assertEquals("startMargin", handler.eventSeq.get(2));
 		assertEquals("property", handler.eventSeq.get(3));
 		assertEquals("property", handler.eventSeq.get(4));
-		assertEquals("endPage", handler.eventSeq.get(5));
+		assertEquals("endMargin", handler.eventSeq.get(5));
 		assertEquals("endPage", handler.eventSeq.get(6));
 		assertFalse(errorHandler.hasError());
 		handler.checkRuleEndings();
@@ -1033,7 +1065,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetPageRuleBad() throws CSSException, IOException {
 		Reader re = new StringReader("@page :first{margin-top:20%;myname@top-left{content:'foo';color:blue}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1041,7 +1073,6 @@ public class SheetParserTest {
 		assertEquals(1, handler.pageRuleNames.size());
 		assertNull(handler.pageRuleNames.getFirst());
 		assertEquals(":first", handler.pseudoPages.getFirst());
-		assertEquals(1, handler.endPageCount);
 		assertEquals(1, handler.propertyNames.size());
 		assertEquals("margin-top", handler.propertyNames.get(0));
 		assertEquals(1, handler.lexicalValues.size());
@@ -1061,7 +1092,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetPageRuleBad2() throws CSSException, IOException {
 		Reader re = new StringReader("@page :first{margin-top:20%;myname @top-left{content:'foo';color:blue}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1069,7 +1100,6 @@ public class SheetParserTest {
 		assertEquals(1, handler.pageRuleNames.size());
 		assertNull(handler.pageRuleNames.getFirst());
 		assertEquals(":first", handler.pseudoPages.getFirst());
-		assertEquals(1, handler.endPageCount);
 		assertEquals(1, handler.propertyNames.size());
 		assertEquals("margin-top", handler.propertyNames.get(0));
 		assertEquals(1, handler.lexicalValues.size());
@@ -1089,7 +1119,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetPageRuleBad3() throws CSSException, IOException {
 		Reader re = new StringReader("@page :first{margin-top:20%; top-left{content:'foo';color:blue}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1097,7 +1127,6 @@ public class SheetParserTest {
 		assertEquals(1, handler.pageRuleNames.size());
 		assertNull(handler.pageRuleNames.getFirst());
 		assertEquals(":first", handler.pseudoPages.getFirst());
-		assertEquals(1, handler.endPageCount);
 		assertEquals(1, handler.propertyNames.size());
 		assertEquals("margin-top", handler.propertyNames.get(0));
 		assertEquals(1, handler.lexicalValues.size());
@@ -1117,19 +1146,17 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetPageRuleNestedOnMediaRule() throws CSSException, IOException {
 		Reader re = new StringReader("@media print {@page {margin-top: 20%;}h3 {width: 80%}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.pageRuleNames.size());
 		assertNull(handler.pageRuleNames.getFirst());
-		assertEquals(1, handler.endPageCount);
 		assertEquals(1, handler.mediaRuleLists.size());
 		MediaQueryList medialist = handler.mediaRuleLists.getFirst();
 		assertEquals(1, medialist.getLength());
 		assertEquals("print", medialist.item(0));
-		assertEquals(1, handler.endMediaCount);
 		assertEquals(1, handler.selectors.size());
 		assertEquals("h3", handler.selectors.getFirst().toString());
 		assertEquals(1, handler.endSelectors.size());
@@ -1152,41 +1179,87 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetOtherRules() throws CSSException, IOException {
 		Reader re = loadTestCSSReader("other_rules.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		re.close();
+		//
+		assertEquals(1, handler.viewportCount);
+		//
 		assertEquals(1, handler.selectors.size());
 		assertEquals("body", handler.selectors.getFirst().toString());
-		assertEquals(1, handler.propertyNames.size());
-		assertEquals("background-color", handler.propertyNames.get(0));
-		assertEquals(1, handler.lexicalValues.size());
-		assertEquals("red", handler.lexicalValues.get(0).toString());
-		assertEquals(1, handler.priorities.size());
-		assertNull(handler.priorities.get(0));
-		assertEquals(5, handler.atRules.size());
-		assertEquals("@viewport { width: device-width; }", handler.atRules.get(0));
-		assertEquals("@keyframes slide-right { " + "from {margin-left: 0px;} "
-				+ "50% {margin-left: 110px; opacity: 1;} " + "50% {opacity: 0.9;} " + "to {margin-left: 200px;} }",
-				handler.atRules.get(1));
-		assertEquals(
-				"@keyframes important1 { from { margin-top: 50px; }"
-						+ " 50% { margin-top: 150px !important; } /* ignored */" + "to { margin-top: 100px; } }",
-				handler.atRules.get(2));
-		assertEquals("@counter-style foo { symbols: \\1F44D; suffix: \" \"; }", handler.atRules.get(3));
-		assertEquals(
-				"@font-feature-values Some Font { @swash { swishy: 1; flowing: 2; } @styleset { double-W: 14; sharp-terminals: 16 1; } }",
-				handler.atRules.get(4));
-		assertFalse(errorHandler.hasError());
+		assertEquals(1, handler.fontFeaturesNames.size());
+		assertEquals("Some Font", handler.fontFeaturesNames.get(0)[0]);
+		assertEquals(2, handler.featureMapNames.size());
+		assertEquals("swash", handler.featureMapNames.get(0));
+		assertEquals("styleset", handler.featureMapNames.get(1));
+		//
+		assertEquals(2, handler.keyframesNames.size());
+		assertEquals("slide-right", handler.keyframesNames.get(0));
+		assertEquals("important1", handler.keyframesNames.get(1));
+		assertEquals(7, handler.keyframeSelectors.size());
+		assertEquals("from", handler.keyframeSelectors.get(0).toString());
+		assertEquals("50%", handler.keyframeSelectors.get(1).toString());
+		assertEquals("50%", handler.keyframeSelectors.get(2).toString());
+		assertEquals("to", handler.keyframeSelectors.get(3).toString());
+		assertEquals("from", handler.keyframeSelectors.get(4).toString());
+		assertEquals("50%", handler.keyframeSelectors.get(5).toString());
+		assertEquals("to", handler.keyframeSelectors.get(6).toString());
+		//
+		assertEquals(1, handler.counterStyleNames.size());
+		assertEquals("foo", handler.counterStyleNames.get(0));
+		//
+		assertEquals(15, handler.propertyNames.size());
+		assertEquals("width", handler.propertyNames.get(0));
+		assertEquals("margin-left", handler.propertyNames.get(1));
+		assertEquals("opacity", handler.propertyNames.get(3));
+		assertEquals("opacity", handler.propertyNames.get(4));
+		assertEquals("margin-left", handler.propertyNames.get(5));
+		assertEquals("margin-top", handler.propertyNames.get(6));
+		assertEquals("margin-top", handler.propertyNames.get(7));
+		assertEquals("symbols", handler.propertyNames.get(8));
+		assertEquals("suffix", handler.propertyNames.get(9));
+		assertEquals("swishy", handler.propertyNames.get(10));
+		assertEquals("flowing", handler.propertyNames.get(11));
+		assertEquals("double-W", handler.propertyNames.get(12));
+		assertEquals("sharp-terminals", handler.propertyNames.get(13));
+		assertEquals("background-color", handler.propertyNames.get(14));
+		assertEquals(15, handler.lexicalValues.size());
+		assertEquals("device-width", handler.lexicalValues.get(0).toString());
+		assertEquals("0px", handler.lexicalValues.get(1).toString());
+		assertEquals("110px", handler.lexicalValues.get(2).toString());
+		assertEquals("1", handler.lexicalValues.get(3).toString());
+		assertEquals("0.9", handler.lexicalValues.get(4).toString());
+		assertEquals("200px", handler.lexicalValues.get(5).toString());
+		assertEquals("50px", handler.lexicalValues.get(6).toString());
+		assertEquals("100px", handler.lexicalValues.get(7).toString());
+		assertEquals("\\1F44D", handler.lexicalValues.get(8).toString());
+		assertEquals("\" \"", handler.lexicalValues.get(9).toString());
+		assertEquals("1", handler.lexicalValues.get(10).toString());
+		assertEquals("2", handler.lexicalValues.get(11).toString());
+		assertEquals("14", handler.lexicalValues.get(12).toString());
+		assertEquals("16 1", handler.lexicalValues.get(13).toString());
+		assertEquals("red", handler.lexicalValues.get(14).toString());
+		assertEquals(15, handler.priorities.size());
+		assertNull(handler.priorities.get(14));
+		//
+		assertEquals(1, handler.atRules.size());
+		assertEquals("@-webkit-keyframes foo {from{margin-top: 50px; }to{margin-top: 100px;}}",
+				handler.atRules.getFirst());
+		//
+		assertEquals(1, handler.comments.size());
+		assertEquals(" ignored ", handler.comments.get(0));
+		//
+		assertTrue(errorHandler.hasError());
 		handler.checkRuleEndings();
 	}
 
 	@Test
 	public void testParseCharsetRule() throws CSSException, IOException {
 		Reader re = new StringReader("@charset \"utf-8\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1198,7 +1271,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseCharsetRule2() throws CSSException, IOException {
 		Reader re = new StringReader("/* My sheet */\n@charset \"utf-8\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1211,7 +1284,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseCharsetRuleBad() throws CSSException, IOException {
 		Reader re = new StringReader("@import url('foo.css');@charset \"utf-8\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1232,7 +1305,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseCharsetRuleBad2() throws CSSException, IOException {
 		Reader re = new StringReader("p{display:block;}@charset \"utf-8\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1250,7 +1323,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseCharsetRuleBad3() throws CSSException, IOException {
 		Reader re = new StringReader("@media print {@page {margin-top: 20%;}h3 {width: 80%}}@charset \"utf-8\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1266,7 +1339,7 @@ public class SheetParserTest {
 	public void testParseCharsetRuleBad4() throws CSSException, IOException {
 		Reader re = new StringReader(
 				"@font-face{font-family:'Mechanical Bold';src:url('font/MechanicalBd.otf')}@charset \"utf-8\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1281,12 +1354,17 @@ public class SheetParserTest {
 	public void testParseCharsetRuleBad5() throws CSSException, IOException {
 		Reader re = new StringReader(
 				"@font-feature-values Foo Sans, Bar {@styleset {my-style: 2;}}@charset \"utf-8\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
-		assertEquals(1, handler.atRules.size());
+		assertEquals(1, handler.fontFeaturesNames.size());
+		assertEquals("Foo Sans", handler.fontFeaturesNames.get(0)[0]);
+		assertEquals("Bar", handler.fontFeaturesNames.get(0)[1]);
+		assertEquals(1, handler.featureMapNames.size());
+		assertEquals("styleset", handler.featureMapNames.get(0));
+		assertEquals(0, handler.atRules.size());
 		assertTrue(errorHandler.hasError());
 		assertEquals(1, errorHandler.getLastException().getLineNumber());
 		assertEquals(62, errorHandler.getLastException().getColumnNumber());
@@ -1299,7 +1377,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseCharsetRuleBadRecovery() throws CSSException, IOException {
 		Reader re = new StringReader("p{display:block;}@charset \"utf-8\";span {color: blue;}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1320,7 +1398,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRule() throws CSSException, IOException {
 		Reader re = new StringReader("@import url('foo.css');");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1338,7 +1416,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRule2() throws CSSException, IOException {
 		Reader re = new StringReader("@import url(foo.css);");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1356,7 +1434,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleMedia() throws CSSException, IOException {
 		Reader re = new StringReader("@import url(foo.css) print;");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1373,7 +1451,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleMedia2() throws CSSException, IOException {
 		Reader re = new StringReader("@import url(foo.css) screen, tv;");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1391,7 +1469,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleMediaQuery() throws CSSException, IOException {
 		Reader re = new StringReader("@import url('foo.css') (orientation:landscape);");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1408,7 +1486,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleMediaQuery2() throws CSSException, IOException {
 		Reader re = new StringReader("@import url('foo.css') screen and (orientation:landscape);");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1425,7 +1503,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleMediaQueryBad() throws CSSException, IOException {
 		Reader re = new StringReader("@import url('foo.css') screen and ((orientation:landscape);");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1439,7 +1517,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleNoUrl() throws CSSException, IOException {
 		Reader re = new StringReader("@import 'foo.css';");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1457,7 +1535,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleNoUrlMedia() throws CSSException, IOException {
 		Reader re = new StringReader("@import 'foo.css' print;");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1474,7 +1552,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleNoUrlDQ() throws CSSException, IOException {
 		Reader re = new StringReader("@import \"foo.css\";");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1492,7 +1570,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleNoUrlDQMedia() throws CSSException, IOException {
 		Reader re = new StringReader("@import \"foo.css\" screen, tv;");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1510,7 +1588,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseImportRuleBad() throws CSSException, IOException {
 		Reader re = new StringReader("foo@import url('bar.css');");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1527,7 +1605,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseEmptyAtRule() throws CSSException, IOException {
 		Reader re = new StringReader("@;");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1544,31 +1622,53 @@ public class SheetParserTest {
 	@Test
 	public void testParseCounterStyleRule() throws CSSException, IOException {
 		Reader re = new StringReader("@counter-style foo {symbols: \\1F44D;\n suffix: \" \";\n}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
-		assertEquals(1, handler.atRules.size());
-		assertEquals("@counter-style foo {symbols: \\1F44D; suffix: \" \"; }", handler.atRules.get(0));
+		assertEquals(1, handler.counterStyleNames.size());
+		assertEquals("foo", handler.counterStyleNames.get(0));
+		assertEquals(2, handler.propertyNames.size());
+		assertEquals("symbols", handler.propertyNames.get(0));
+		assertEquals("suffix", handler.propertyNames.get(1));
+		assertEquals(2, handler.lexicalValues.size());
+		assertEquals("\\1F44D", handler.lexicalValues.get(0).toString());
+		assertEquals("\" \"", handler.lexicalValues.get(1).toString());
+		assertEquals(0, handler.atRules.size());
+		handler.checkRuleEndings();
+		assertFalse(errorHandler.hasError());
 	}
 
 	@Test
 	public void testParseNestedSupportsRule() throws CSSException, IOException {
 		Reader re = new StringReader(
-				"@media screen {@supports (display: flexbox) and (not (display: inline-grid)) {td {display: table-cell; } li {display: list-item; }}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+				"@media screen {@supports (display: flexbox) and (not (display: inline-grid)) {td {display: table-cell; } li {display: list-item; }@media (color) {.blue {color:blue}}}}");
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
-		assertEquals(1, handler.atRules.size());
-		assertEquals(
-				"@supports (display: flexbox) and (not (display: inline-grid)) {td {display: table-cell; } li {display: list-item; }}",
-				handler.atRules.get(0));
-		assertEquals(1, handler.mediaRuleLists.size());
+		assertEquals(0, handler.atRules.size());
+		assertEquals(1, handler.supportsRuleLists.size());
+		assertEquals("(display: flexbox) and (not (display: inline-grid))",
+				handler.supportsRuleLists.get(0).toString());
+		assertEquals(3, handler.selectors.size());
+		assertEquals("td", handler.selectors.get(0).toString());
+		assertEquals("li", handler.selectors.get(1).toString());
+		assertEquals(".blue", handler.selectors.get(2).toString());
+		assertEquals(3, handler.endSelectors.size());
+		assertEquals(2, handler.mediaRuleLists.size());
 		assertEquals("screen", handler.mediaRuleLists.getFirst().toString());
-		assertEquals(1, handler.endMediaCount);
+		assertEquals("(color)", handler.mediaRuleLists.get(1).toString());
+		assertEquals(3, handler.propertyNames.size());
+		assertEquals("display", handler.propertyNames.get(0));
+		assertEquals("display", handler.propertyNames.get(1));
+		assertEquals("color", handler.propertyNames.get(2));
+		assertEquals(3, handler.lexicalValues.size());
+		assertEquals("table-cell", handler.lexicalValues.get(0).toString());
+		assertEquals("list-item", handler.lexicalValues.get(1).toString());
+		assertEquals("blue", handler.lexicalValues.get(2).toString());
 		handler.checkRuleEndings();
 		assertFalse(errorHandler.hasError());
 	}
@@ -1576,7 +1676,7 @@ public class SheetParserTest {
 	@Test
 	public void testParsePseudoClassNotEmpty() throws CSSException, IOException {
 		Reader re = new StringReader("foo:not() {td {display: table-cell; } li {display: list-item; }}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1590,7 +1690,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetDefaultUserAgentSheet() throws CSSException, IOException {
 		Reader re = loadCSSfromClasspath("/io/sf/carte/doc/style/css/html.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1616,7 +1716,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetDefaultUserAgentSheetQuirks() throws CSSException, IOException {
 		Reader re = loadCSSfromClasspath("/io/sf/carte/doc/style/css/html-quirks.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1642,14 +1742,13 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetUnexpectedChar() throws CSSException, IOException {
 		Reader re = new StringReader("/** Comment 1 **/\\n@media {div.foo{margin:1em}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.comments.size());
 		assertEquals(0, handler.mediaRuleLists.size());
-		assertEquals(0, handler.endMediaCount);
 		assertEquals(0, handler.selectors.size());
 		assertEquals(0, handler.propertyNames.size());
 		assertEquals(0, handler.lexicalValues.size());
@@ -1662,7 +1761,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetUnexpectedChar2() throws CSSException, IOException {
 		Reader re = new StringReader("/** Comment 1 **/;@media {div.foo{margin:1em}}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1670,7 +1769,6 @@ public class SheetParserTest {
 		assertEquals(1, handler.comments.size());
 		assertEquals(1, handler.mediaRuleLists.size());
 		assertEquals("all", handler.mediaRuleLists.get(0).toString());
-		assertEquals(1, handler.endMediaCount);
 		assertEquals(1, handler.selectors.size());
 		assertEquals(1, handler.propertyNames.size());
 		assertEquals("margin", handler.propertyNames.get(0));
@@ -1687,14 +1785,13 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetUnexpectedCharHigh() throws CSSException, IOException {
 		Reader re = new StringReader("/** Comment 1 **/\u7ff0@media {div.foo{margin:1em}}@import 'foo.css';");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.comments.size());
 		assertEquals(0, handler.mediaRuleLists.size());
-		assertEquals(0, handler.endMediaCount);
 		assertEquals(0, handler.selectors.size());
 		assertEquals(0, handler.propertyNames.size());
 		assertEquals(0, handler.lexicalValues.size());
@@ -1714,14 +1811,13 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetUnexpectedChar3() throws CSSException, IOException {
 		Reader re = new StringReader("/** Comment 1 **/:first-child(){margin:1em}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.comments.size());
 		assertEquals(0, handler.mediaRuleLists.size());
-		assertEquals(0, handler.endMediaCount);
 		assertEquals(0, handler.selectors.size());
 		assertEquals(0, handler.propertyNames.size());
 		assertEquals(0, handler.lexicalValues.size());
@@ -1735,14 +1831,13 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetUnexpectedChar4() throws CSSException, IOException {
 		Reader re = new StringReader("/** Comment 1 **/:first-child(foo){margin:1em}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.comments.size());
 		assertEquals(0, handler.mediaRuleLists.size());
-		assertEquals(0, handler.endMediaCount);
 		assertEquals(0, handler.selectors.size());
 		assertEquals(0, handler.propertyNames.size());
 		assertEquals(0, handler.lexicalValues.size());
@@ -1756,14 +1851,13 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetUnexpectedChar5() throws CSSException, IOException {
 		Reader re = new StringReader("/** Comment 1 **/::first-line(){margin:1em}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.comments.size());
 		assertEquals(0, handler.mediaRuleLists.size());
-		assertEquals(0, handler.endMediaCount);
 		assertEquals(0, handler.selectors.size());
 		assertEquals(0, handler.propertyNames.size());
 		assertEquals(0, handler.lexicalValues.size());
@@ -1777,14 +1871,13 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetUnexpectedChar6() throws CSSException, IOException {
 		Reader re = new StringReader("/** Comment 1 **/:first-line(){margin:1em}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		assertEquals(1, handler.comments.size());
 		assertEquals(0, handler.mediaRuleLists.size());
-		assertEquals(0, handler.endMediaCount);
 		assertEquals(0, handler.selectors.size());
 		assertEquals(0, handler.propertyNames.size());
 		assertEquals(0, handler.lexicalValues.size());
@@ -1798,7 +1891,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetUnexpectedEOF1() throws CSSException, IOException {
 		Reader re = loadTestCSSReader("unexpectedEOF1.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1817,7 +1910,7 @@ public class SheetParserTest {
 	@Test
 	public void testParseStyleSheetUnexpectedEOF2() throws CSSException, IOException {
 		Reader re = loadTestCSSReader("unexpectedEOF2.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1832,31 +1925,43 @@ public class SheetParserTest {
 		assertEquals(1, handler.selectors.size());
 		assertEquals("body", handler.selectors.getFirst().toString());
 		assertFalse(errorHandler.hasError());
+		assertTrue(errorHandler.hasWarning());
 	}
 
 	@Test
 	public void testParseStyleSheetUnexpectedEOF3() throws CSSException, IOException {
 		Reader re = loadTestCSSReader("unexpectedEOF3.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		parser.parseStyleSheet(re);
 		re.close();
-		assertEquals(1, handler.atRules.size());
-		assertEquals(
-				"@supports (display: table-cell) and (display: list-item) {td {display: table-cell; } li {display: list-item; }}",
-				handler.atRules.getFirst());
+		assertEquals(0, handler.atRules.size());
+		assertEquals(1, handler.supportsRuleLists.size());
+		assertEquals("(display: table-cell) and (display: list-item)",
+				handler.supportsRuleLists.get(0).toString());
+		assertEquals(2, handler.selectors.size());
+		assertEquals("td", handler.selectors.get(0).toString());
+		assertEquals("li", handler.selectors.get(1).toString());
+		assertEquals(2, handler.endSelectors.size());
+		assertEquals(2, handler.propertyNames.size());
+		assertEquals("display", handler.propertyNames.get(0));
+		assertEquals("display", handler.propertyNames.get(1));
+		assertEquals(2, handler.lexicalValues.size());
+		assertEquals("table-cell", handler.lexicalValues.get(0).toString());
+		assertEquals("list-item", handler.lexicalValues.get(1).toString());
 		assertEquals(1, handler.namespaceMaps.size());
 		assertEquals("svg", handler.namespaceMaps.keySet().iterator().next());
 		assertEquals("http://www.w3.org/2000/svg", handler.namespaceMaps.get("svg"));
-		assertTrue(errorHandler.hasError());
+		assertFalse(errorHandler.hasError());
+		assertTrue(errorHandler.hasWarning());
 	}
 
 	@Test
 	public void testParseStyleSheetUnexpectedEOL1() throws CSSException, IOException {
 		Reader re = loadTestCSSReader("unexpectedEOL1.css");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1883,7 +1988,7 @@ public class SheetParserTest {
 	public void testParseStyleSheetUnexpectedEOLNL() throws CSSException, IOException {
 		Reader re = new StringReader(
 				"body {\nbackground-color: red;\nfont-family: 'Times New\ncolor: blue;:;\nborder: none}");
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1907,37 +2012,52 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseStyleSheetComments() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
 		Reader re = loadTestCSSReader("comments.css");
 		parser.parseStyleSheet(re);
 		re.close();
+		//
+		assertEquals(1, handler.viewportCount);
+		//
 		assertEquals(1, handler.selectors.size());
 		assertEquals("body", handler.selectors.getFirst().toString());
-		assertEquals(1, handler.propertyNames.size());
-		assertEquals("background-color", handler.propertyNames.getFirst());
-		LexicalUnit lu = handler.lexicalValues.getFirst();
+		assertEquals(2, handler.propertyNames.size());
+		assertEquals("width", handler.propertyNames.getFirst());
+		assertEquals("background-color", handler.propertyNames.get(1));
+		//
+		assertEquals("device-width", handler.lexicalValues.get(0).toString());
+		LexicalUnit lu = handler.lexicalValues.get(1);
 		assertNotNull(lu);
 		assertEquals(LexicalUnit.SAC_IDENT, lu.getLexicalUnitType());
 		assertEquals("red", lu.getStringValue());
-		assertEquals(4, handler.comments.size());
+		//
+		assertEquals(8, handler.comments.size());
 		assertEquals(" pre-rule-1 ", handler.comments.get(0));
-		assertEquals(" pre-rule-2 ", handler.comments.get(1));
-		assertEquals(" pre-style-decl 1 ", handler.comments.get(2));
-		assertEquals(" post-style-decl 1 ", handler.comments.get(3));
-		assertEquals(1, handler.atRules.size());
+		assertEquals(" pre-viewport-decl ", handler.comments.get(1));
+		assertEquals(" post-viewport-decl ", handler.comments.get(2));
+		assertEquals(" pre-rule-1-webkit ", handler.comments.get(3));
+		assertEquals(" pre-rule-2 ", handler.comments.get(4));
+		assertEquals(" pre-style-decl 1 ", handler.comments.get(5));
+		assertEquals(" post-style-decl 1 ", handler.comments.get(6));
+		assertEquals(" pre-webkit-kfs ", handler.comments.get(7));
+		//
+		assertEquals(2, handler.atRules.size());
 		assertEquals(
-				"@viewport /* skip-vw 1 */{/* pre-viewport-decl */ width: /* skip-vw 2 */device-width; /* post-viewport-decl */}",
+				"@-webkit-viewport /* skip-vw 1-webkit */{/* pre-viewport-decl-webkit */ width: /* skip-vw 2-webkit */device-width; /* post-viewport-decl-webkit */}",
 				handler.atRules.get(0));
+		assertEquals(
+				"@-webkit-keyframes important1 { /* pre-webkit-kf-list */from /* post-webkit-kfsel-from */{ /* pre-webkit-kf-from-decl */margin-top: 50px;/* post-webkit-kf-from-decl */ } /* post-webkit-kf-from */50% /* post-webkit-kfsel-50% */{/* pre-webkit-kf-50%-decl */margin-top: 150px !important; /* post-webkit-kf-50%-decl */} /* post-webkit-kf-50% */to/* post-webkit-kfsel-to */{ margin-top: 100px; }/* post-webkit-kf-to */ /* post-webkit-kf-list */}",
+				handler.atRules.get(1));
 		assertFalse(errorHandler.hasError());
 		handler.checkRuleEndings();
 	}
 
 	@Test
 	public void testParseStyleSheetComments2() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
@@ -1960,7 +2080,7 @@ public class SheetParserTest {
 
 	@Test
 	public void testParseStyleSheetComments3() throws CSSException, IOException {
-		TestDocumentHandler handler = new TestDocumentHandler();
+		TestCSSHandler handler = new TestCSSHandler();
 		parser.setDocumentHandler(handler);
 		TestErrorHandler errorHandler = new TestErrorHandler();
 		parser.setErrorHandler(errorHandler);
